--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
-	<file t3:id="1415814785" source-language="en" target-language="de" datatype="plaintext" original="messages" date="2022-07-15T18:18:55Z" product-name="td_deepltranslate">
+	<file t3:id="1415814785" source-language="en" target-language="de" datatype="plaintext" original="messages" date="2022-07-15T18:18:55Z" product-name="wv_deepltranslate">
 		<header/>
 		<body>
 			<trans-unit id="backend.button.translate">
@@ -54,11 +54,11 @@
 				<source>DeepL Translate</source>
 				<target>DeepL Übersetzung</target>
 			</trans-unit>
-			<trans-unit id="pages.tx_tddeepltranslate_content_not_checked">
+			<trans-unit id="pages.tx_wvdeepltranslate_content_not_checked">
 				<source>DeepL Translated Content was not checked</source>
 				<target>DeepL übersetzte Inhalte nicht geprüft</target>
 			</trans-unit>
-			<trans-unit id="pages.tx_tddeepltranslate_translated_time">
+			<trans-unit id="pages.tx_wvdeepltranslate_translated_time">
 				<source>Last translation date</source>
 				<target>Letzte Übersetzung Datum</target>
 			</trans-unit>
